fixed div overflow

--- a/app/elements/edit-pages/script-edit/script-edit.css
+++ b/app/elements/edit-pages/script-edit/script-edit.css
@@ -9,7 +9,7 @@
 }
 
 #editorThemeFontSizeInput {
-	width: 55px;
+	width: 78px;
 	margin-left:7px;
 }
 
