--- a/app/elements/edit-pages/stylesheet-edit/stylesheet-edit.css
+++ b/app/elements/edit-pages/stylesheet-edit/stylesheet-edit.css
@@ -4,7 +4,7 @@
 }
 
 #editorThemeFontSizeInput {
-	width: 55px;
+	width: 78px;
 }
 
 .toggleButtonOption {
